--- a/manifest.json
+++ b/manifest.json
@@ -1,69 +1,16 @@
 {
-    "name": "PWA Sample",
-    "short_name": "PWA Sample",
+    "name": "Keto Tracker",
+    "short_name": "Keto Tracker",
     "icons": [
-      {
-        "src": "icons/icon-72x72.png",
-        "type": "image/png",
-        "sizes": "72x72",
-        "purpose": "maskable"
-      },
-      {
-        "src": "icons/icon-96x96.png",
-        "type": "image/png",
-        "sizes": "96x96",
-        "purpose": "maskable"
-      },
-      {
-        "src": "icons/icon-128x128.png",
-        "type": "image/png",
-        "sizes": "128x128",
-        "purpose": "maskable"
-      },
-      {
-        "src": "icons/icon-144x144.png",
-        "type": "image/png",
-        "sizes": "144x144",
-        "purpose": "maskable"
-      },
-      {
-        "src": "icons/icon-152x152.png",
-        "type": "image/png",
-        "sizes": "152x152",
-        "purpose": "maskable"
-      },
-      {
-        "src": "icons/icon-192x192.png",
-        "type": "image/png",
-        "sizes": "192x192",
-        "purpose": "maskable"
-      },
-      {
-        "src": "icons/icon-384x384.png",
-        "type": "image/png",
-        "sizes": "384x384",
-        "purpose": "maskable"
-      },
-      {
-        "src": "icons/icon-512x512.png",
-        "type": "image/png",
-        "sizes": "512x512",
-        "purpose": "maskable"
-      },
-      {
-        "src": "icons/icon-120x120.png",
-        "type": "image/png",
-        "sizes": "120x120"
-      },
-      {
-        "src": "icons/icon-180x180.png",
-        "type": "image/png",
-        "sizes": "180x180"
-      }
+        {
+          "src": "images/icon-180x180.png",
+          "type": "image/png",
+          "sizes": "180x180"
+        }
     ],
     "start_url": "index.html",
     "display": "standalone",
     "background_color": "#4cb0b9",
     "theme_color": "#4cb0b9",
-    "orientation": "landscape"
+    "orientation": "portrait"
 }
